--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ python-dotenv==1.0.0
 SQLAlchemy==2.0.20
 sqlalchemy-filters==0.13.0
 Werkzeug==2.3.7
+proofdock-chaos-middleware-flask==0.1.3
+proofdock-chaos-middleware-python==0.1.3
+Flask-Caching==2.1.0
+redis==5.0.3
