--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ proofdock-chaos-middleware-flask==0.1.3
 proofdock-chaos-middleware-python==0.1.3
 Flask-Caching==2.1.0
 redis==5.0.3
+psycopg2-binary==2.9.7
+saga_py == 1.1.0
+tenacity==8.2.3 #se usa para reintentar
+Mako==1.3.5
+alembic==1.13.1
