arreglos en importaciones

--- a/docker/postgres/docker-compose.yml
+++ b/docker/postgres/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     ports:
       - '5433:5432' # En la izquierda el de docker y en la derecha el de postgress
     environment:
-      - POSTGRES_PASSWORD=${CONTRA}
-      - POSTGRES_DB=${BASE_DE_DATOS}
-      - POSTGRES_USER=${USUARIO}
+      - POSTGRES_PASSWORD=${PASS_DB}
+      - POSTGRES_DB=${NAME_DB}
+      - POSTGRES_USER=${USER_DB}
       - PGDATA=/var/lib/postgresql/data
     volumes: # Es lo que vincula es host con el contenedor. Es lo que vincula los datos de la "RAM" y los persiste en el disco.
       # Es buena práctica path relativo desde el proyecto ./_data:/lib/postgresql.
