--- a/docker/redis/docker-compose.yml
+++ b/docker/redis/docker-compose.yml
@@ -6,10 +6,17 @@ services:
       - ./data:/data
       - ./data/redis.conf:/data/redis.conf
     command: redis-server /data/redis.conf --loglevel notice --requirepass ${REDIS_PASSWORD}
-    ports:
-      - "6379:6379" # En la izquierda el de docker y en la derecha el de redis
+    # ports:
+    #   - "6379:6379" # En la izquierda el de docker y en la derecha el de redis
     networks:
       - mired
+    labels:
+      - "traefik.enable=true"
+      - "traefik.tcp.routers.redis.rule=HostSNI(`*`)"
+      - "traefik.tcp.routers.redis.entryPoints=redis"
+      - "traefik.tcp.routers.redis.service=redis"
+      - "traefik.tcp.services.redis.loadbalancer.server.port=6379"
 
 networks:
     mired:
+      external: true
